--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,19 @@ uuid = "74b1147e-89c0-431d-8514-c41fa430d269"
 authors = ["Andrew Dolgert <github@dolgert.com>"]
 version = "1.0.0-DEV"
 
+[deps]
+CompetingClocks = "5bb9b785-358c-4fee-af0f-b94a146244a8"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
 [compat]
+CompetingClocks = "0.1.0"
+Distributions = "0.25.120"
+Random = "1.11.0"
+SparseArrays = "1.11.0"
+Test = "1.11.0"
 julia = "1.11.5"
 
 [extras]
