Implements an array that notices every modification to itself

--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "1.0.0-DEV"
 [deps]
 CompetingClocks = "5bb9b785-358c-4fee-af0f-b94a146244a8"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
@@ -14,6 +15,7 @@ Z3 = "06b161dc-0161-11ea-0f74-41f836f4024b"
 [compat]
 CompetingClocks = "0.1.0"
 Distributions = "0.25.120"
+MacroTools = "0.5.16"
 Random = "1.11.0"
 SparseArrays = "1.11.0"
 Test = "1.11.0"
