--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "1.0.0-DEV"
 [deps]
 CompetingClocks = "5bb9b785-358c-4fee-af0f-b94a146244a8"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
@@ -15,6 +16,7 @@ Z3 = "06b161dc-0161-11ea-0f74-41f836f4024b"
 [compat]
 CompetingClocks = "0.1.0"
 Distributions = "0.25.120"
+Logging = "1.11.0"
 MacroTools = "0.5.16"
 Random = "1.11.0"
 SparseArrays = "1.11.0"
